# Hi3DGenMcp

./: README.md  pyproject.toml
src/: config.py  inference_ig2mv_sdxl.py  main.py
src/trellis/pipelines/: trellis_image_to_3d.py
whl/: flash_attn-2.7.4+cu124torch2.6.0cxx11abiFALSE-cp312-cp312-win_amd64.whl
