[project]
name = "hi3dgenmcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
dependencies = [
    "transformers==4.46.3",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "xformers==0.0.27.post2",
    "utils3d @ git+https://github.com/EasternJournalist/utils3d.git@9a4eb15e4021b67b12c460c7057d642626897ec8",
    "mcp[cli]>=1.4.1",
    "flash_attn", # custom wheel c.f. below
    "numpy<2",
    "pillow>=11.1.0",
    "onnxruntime-gpu>=1.21.0",
    "trimesh>=4.6.6",
    "scipy>=1.15.2",
    "tqdm>=4.67.1",
    "kaolin==0.17.0",
    "easydict>=1.13",
    "rembg>=2.0.65",
    "open3d>=0.19.0",
    "pymeshfix>=0.17.0",
    "igraph>=0.11.8",
    "diffoctreerast @ git+https://github.com/JeffreyXiang/diffoctreerast.git@b09c20b84ec3aace4729e6e18a613112320eca3a"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "httpx>=0.28.0",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
kaolin = [
    { url = "https://nvidia-kaolin.s3.us-east-2.amazonaws.com/torch-2.4.0_cu124/kaolin-0.17.0-cp312-cp312-win_amd64.whl" }
]
torch = [
    { index = "pytorch" },
]
torchvision = [
    { index = "pytorch" },
]
# from 
flash_attn = { path = "./whl/flash_attn-2.7.4+cu124torch2.6.0cxx11abiFALSE-cp312-cp312-win_amd64.whl" }

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
